// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInputV2 > should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-11 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-13 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for="«rk»"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="true"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="true"
            class="emotion-7 emotion-8"
            data-size="large"
            id="«rk»"
            type="text"
            value="test"
          />
          <div
            class="emotion-9 emotion-10"
          >
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="emotion-13 emotion-4"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 1rem;
}

.emotion-11 {
  vertical-align: middle;
  fill: #22674e;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #22674e;
  fill: none;
}

.emotion-13 {
  color: #22674e;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for="«rg»"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="true"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            id="«rg»"
            type="text"
            value="test"
          />
          <div
            class="emotion-9 emotion-10"
          >
            <svg
              class="emotion-11 emotion-12"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM11.8435 6.20859C12.0967 5.88082 12.0363 5.40981 11.7086 5.15654C11.3808 4.90327 10.9098 4.96365 10.6565 5.29141L6.95615 10.0801L5.30747 8.24828C5.03038 7.94039 4.55616 7.91543 4.24828 8.19253C3.94039 8.46962 3.91544 8.94384 4.19253 9.25172L6.44253 11.7517C6.59132 11.917 6.80582 12.0078 7.02809 11.9995C7.25036 11.9911 7.45746 11.8846 7.59346 11.7086L11.8435 6.20859Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="emotion-13 emotion-4"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for="«ra»"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="true"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            disabled=""
            id="«ra»"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for="«rd»"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="true"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            id="«rd»"
            readonly=""
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 > should render correctly with basic props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-8 {
  color: #3f4250;
}

.emotion-5>.emotion-8::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-8::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-8::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-7[data-size='large'] {
  font-size: 1rem;
}

.emotion-7[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 emotion-4"
        for="«r0»"
      >
        Test
      </label>
      <div>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="emotion-7 emotion-8"
            data-size="large"
            id="«r0»"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
